--- a/src/global.less
+++ b/src/global.less
@@ -61,3 +61,12 @@ ol {
 .row-slope-too-large:hover {
   background-color: #fff1f0 !important;
 }
+
+.ant-pro-form-login-header {
+  height: 100px;
+}
+
+.ant-pro-form-login-logo {
+  height: 100px;
+  width: 500px;
+}
